# jfbterm-hue

./: .gitignore  AUTHORS  Makefile.in  README.md  config.h.in  configure  configure.ac  csv.h  fbcommon.c  fbcommon.h  fbdpsp.c  fbdpsp.h  font.c  font.h  getcap.c  getcap.h  main.c  message.c  message.h  mytypes.h  pcf.c  pcf.h  pen.c  pen.h  picofont.c  picofont.h  sequence.h  term.c  term.h  terminfo.jfbterm  util.c  util.h  vterm.c  vterm.h  vtermlow.c
fonts/tools/: JYOUYOUKANJI-JISCODE.MAP.txt  bdfjoin.sh
plain/: ChangeLog  INSTALL.ja  LICENSE  Makefile.am  README.ja  config.h.in  configure.ac  csv.c  font.h  getcap.h  jfbterm.conf.sample.ja  main.c  main.h  message.h  mytypes.h  pcf.c  pen.c  pen.h  picofont.c  picofont.h  vterm.c  vterm.h
